		- "nickname" editing moved to form_title_subtitle
		- "previews" removed form "menuLeft" and moved to a Big gray Tab in form_previews
		- added "nl2br" to editors notes
		- description - HTML rich text con pochi bottoni
		- save as draft button + draft object icon
	* improved "continue" link on newsletter items
	* #181 ui: alert su cambio pagina se oggetto modificato e non salvato
	* #241 sort field in object list: added class 'SortableUp' in be_toolbar
	* update statistics module
	* admin/plugins skinning
	* webmarks description w/html
	* fix on append delete media on the tree in details view
	* onchange_callback function added in the tiny_mce_default_ini.js

 Frontend changes:
	* fixed error on staging_toolbar
	* added FrontendController method to handle access denied
	* added BeditaRuntimeException and handled in FrontendController
	* #211 - ui: generic BEdita helper (handle meta tag, canonicalPath)
	* fix many errors on canonicalPath
	* redefine $checkPubDate as array to check start and end publication date separately
	* added check publication date in search method
	* load last comment inserted when an ajax call is performed
	* frontend configurations (frontend.ini.php) loaded in backend bootsrap
	* fix bug: when module status is off it was reachable by url
	* added content_nicknameBeforeFilter($sectionNickname) and content_nicknameBeforeRender callbacks
	* passed parameters $contentNickname (populated only if a content is requested) to section_nicknameBeforeFilter to easly know if a content is requested before finding result
	* alias in staging tooolbar
	* Add callback beforeCheckLogin in FrontendController to perform operations before checkLogin method is called (for example to skip check)
	* download permitted also for attach related object
	* signup frontend
	* bugfix: choosing a translation language left main language fields populated if object translation fields are empty