@@ -6,3 +6,8 @@ UPDATE `object_types` SET `name` = 'mail_template' WHERE `object_types`.`id` =36
 UPDATE `object_types` SET `name` = 'biblio_item' WHERE `object_types`.`id` =38;
 UPDATE `object_types` SET `name` = 'editor_note' WHERE `object_types`.`id` =39;
 UPDATE `object_types` SET `name` = 'questionnaire_result' WHERE `object_types`.`id` =42;
+
+-- remove `object_types` pluginized
+DELETE FROM `object_types` WHERE `object_types`.`name` = 'biblio_item' AND `object_types`.`id` =38
+DELETE FROM `object_types` WHERE `object_types`.`name` = 'bibliography' AND `object_types`.`id` =19
+DELETE FROM `object_types` WHERE `object_types`.`name` = 'book' AND `object_types`.`id` =20
